# lsq-watcher

./: .gitignore  Cargo.toml  README.md
src/: fsevent.rs  lib.rs  main.rs
