[package]
name = "logseq-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
notify = "5.0.0-pre.15"
anyhow = "1"
globset = "0.4"
walkdir = "2"

itertools = "0.10"
[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.37", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "alloc",
] }


[target.'cfg(target_os="macos")'.dependencies]
fsevent-sys = { version = "4" }
core-foundation = "0.9"
kqueue = { version = "1.0", optional = true }
libc = "0.2.4"
